Update blog link in about.html
diha fkrk*2

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <p>We are constantly exploring new topics and expanding our horizons. From technology and design to personal development, we cover a wide range of subjects. Stay tuned for more updates and new content!</p>
         <h2>Useful Resources</h2>
         <ul>
-            <li><a href="#">Link to Our Blog</a></li>
+            <li><a href="index.html">Link to Our Blog</a></li>
             <li><a href="#">Link to Our Services</a></li>
             <li><a href="page4.html">Go to My Channel Page</a></li>
         </ul>
